fixed aside bar overflow + added comments

--- a/Desktop.css
+++ b/Desktop.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    }
+    } /* removes all the default padding on my page */
 
 html, body {
         height: 100%;
@@ -12,7 +12,7 @@ html, body {
 body {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto 1fr auto; /* This lines helps the footer stay at the bottom of the screen */
     grid-template-areas: 
     "header nav nav nav"
     "main main main aside"
@@ -24,7 +24,7 @@ body {
 
 .text-highlight {
     color: rgb(255, 57, 57);
-}
+} /* highlights my name */
 
 h1 {
     text-align: center;
@@ -69,15 +69,9 @@ aside {
     padding: 2em;
     margin-left: 40px;
     width: auto;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 25% 25% 25% 25%;
-    grid-template-areas: 
-    "HTML"
-    "JAVA"
-    "CSS"
-    "PYTHON";
-    height: 100%;
+    flex-direction: column;  /* want my items to flex vertically */
+    justify-content: space-around;
+    height: auto; /* adding auto helped stop the aside bar from overlfowing */
 
     
 }
@@ -86,6 +80,7 @@ footer {
     background-color: rgb(7, 14, 15);
     color: rgb(123, 255, 71);
     grid-area: footer;
+    margin-top: auto;
 }
 
 nav a {
@@ -105,26 +100,26 @@ nav ul {
 #htmlImage img {
     height: 10em; 
     width: auto;
-    grid-area: html;
+    margin-bottom: 20px;
     padding-left: 50px;
 }
 
 #pythonImage img {
     height: 10em; 
     width: auto;
-    grid-area: python;
+    margin-bottom: 20px; 
     padding-left: 50px;
 }
 
 #javaImage img {
     height: 10em; 
     width: auto;
-    grid-area: java;
+    margin-bottom: 20px; /* no padding on this image because it was already slightly to the right */
 }
 
 #cssImage img {
     height: 10em; 
     width: auto;
-    grid-area: css;
+    margin-bottom: 20px;
     padding-left: 60px;
 }
